# verb-conjugator

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  common_verbs.txt  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_verb_conjugator.py  tox.ini  verb_conjugator.py
tests/: test_verb_conjugator.py
verb_conjugator/: __main__.py  common_verbs.txt  data.py  verb_conjugator.py
